MUC: only include <x xmlns=...muc.../> when joining.

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=29147>